# services/registry/src/main/java/io/cartogra/registry/application/dto/CreateServiceCommand.java
@@ -10,5 +10,6 @@ public record CreateServiceCommand(
         String repositoryUrl,
         String techStack,
         String metadata,
-        UUID requestedBy
+        UUID requestedBy,
+        String healthEndpoint
 ) {}
