# services/registry/src/main/java/io/cartogra/registry/application/dto/UpdateServiceCommand.java
@@ -11,5 +11,6 @@ public record UpdateServiceCommand(
         String techStack,
         String metadata,
         String healthStatus,
-        UUID requestedBy
+        UUID requestedBy,
+        String healthEndpoint
 ) {}
